# YSDA

./: .gitignore  .tmux.conf  README.MD  README.md  job requisites.pages  notes.pages  pyproject.toml  requirements.txt  requirements_gpu.txt
CppProjects/Algorithms_training/Homework_2/: A.cpp  CMakeLists.txt  D.cpp  E.cpp
CppProjects/Shad_algorithms/contest_3/: CMakeLists.txt  D.cpp  fixed_set_test.cpp
CppProjects/Shad_algorithms_2/Seminars/: C.cpp  CMakeLists.txt  E.cpp  F.cpp  contest.cpp  string.h
Dependency_recovery/: HW4.ipynb  SHAD Dependecy recovery 1.tex  SHAD Dependecy recovery 4.tex
Machine_Learning/: README.md
Machine_Learning/Recomending/: als.py  baseline.py  baseline_main.py  bayesian_pmf.py  bpmf.py  callbacks.py  cat.py  cpmf_config.yaml  data.py  entrypoints.py  fit-perf_logs.txt  lab_recommending-Copy1.ipynb  lab_recommending-Copy2.ipynb  lab_recommending-Copy3.ipynb  lab_recommending-Copy4.ipynb  lab_recommending.ipynb  lightning.py  lit_module.py  loss.py  losses.py  main.py  metrics.py  model.py  movielens.py  nearest_neighbours.py  pmf.py  pmf_config.yaml  pmf_config_level_2.yaml  pyproject.toml  recommender.py  sem_recommending.ipynb  slim.py  test.py  tests.py  utils.py
Machine_Learning/Recomending/Notebooks/: lab_recommending.ipynb
Machine_Learning/Recomending/catboost_info/: catboost_training.json  time_left.tsv
Machine_Learning/Recomending/configs/: als.yaml  als_run.yaml  als_sweep.yaml  baseline_sweep.yaml  bpmf.yaml  bpmf_sweep.yaml  cat.yaml  config_for_testing.yaml  cpmf_run.yaml  cpmf_run_debug.yaml  cpmf_run_ranking_loss.yaml  cpmf_sweep.yaml  cpmf_sweep_level_2.yaml  implicit_mf.yaml  implicit_mf_sweep.yaml  implicit_nn.yaml  implicit_nn_sweep.yaml  nearest_neighbours.yaml  nearest_neighbours_sweep.yaml  pmf.yaml  pmf_run.yaml  pmf_run_debug.yaml  pmf_run_mse_loss.yaml  pmf_run_ranking_loss.yaml  pmf_sweep.yaml  pmf_sweep_level_2.yaml  pmf_tune.yaml  slim.yaml  slim_run.yaml  slim_run_debug.yaml  slim_sweep.yaml  svd.yaml  svd_sweep.yaml
Machine_Learning/Recomending/notebooks/: lab_recommending.ipynb
Python/: Lab_0.ipynb  Lab_1.ipynb  Lecture 2.ipynb  machine_learning_1_seminar_071021.ipynb  machine_learning_1_seminar_300921.ipynb
algorithms/: Algorithms_2_theory_2.ipynb  main-2.tex  main-3.tex  main-4.tex  main-5.tex  main-6.tex  main.tex
coderun_2023/: coderun_ds_1.ipynb  coderun_ml_1.ipynb  coderun_ml_2.ipynb
cpp_projects/shad_algorithms/seminar_tasks/: A.cpp  B.cpp  CMakeLists.txt  F.cpp  H.cpp  J.cpp  contest.cpp  graph.h
cpp_projects/shad_algorithms_2/code_review/: CMakeLists.txt  fuzzy_matching.h
cpp_projects/shad_algorithms_2/code_review_2/: CMakeLists.txt  main.cpp
cpp_projects/white_belt/week_4/: 10.cpp  12.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  9.cpp  CMakeLists.txt  main.cpp
dependency_recovery/: HW4.ipynb  SHAD Dependecy recovery 2.tex  SHAD Dependecy recovery 3.tex  Методы решения некорректных задач.djvu
local/: .bashrc  .tmux.conf  activate  requirements.txt  requirements_python_369.txt
machine_learning/: Lab_EM_Cluster_AV.ipynb  coderun_ml_1.ipynb  coderun_ml_2.ipynb  lab_backpropagation.ipynb  lab_cnn.ipynb  lab_em_algorithm.ipynb  lab_forecasting.ipynb  lab_forecasting_2.ipynb  lab_ranking.ipynb  lab_recommending.ipynb  lab_recommending_2.ipynb  lab_recommending_music.ipynb  lab_recommending_zen.ipynb  lab_research_papers.ipynb  playground_nlp.ipynb  semimar_nlp.ipynb  seminar_deep_learning_tricks.ipynb  seminar_em_algorithm.ipynb  seminar_nlp.ipynb  seminar_recommending.ipynb  seminar_recommending_music.ipynb  seminar_rl_1.ipynb
machine_learning/recommending/: README.md  README.txt  __init__.py  als.py  app.py  baseline.py  bpmf.py  callbacks.py  cat.py  data.py  entrypoint.py  entrypoints.py  interface.py  lab_music.ipynb  lit.py  losses.py  main.py  maths.py  metrics.py  movielens.py  pmf.py  pyproject.toml  recommender.py  seminar_music.ipynb  slim.py  tests.py  utils.py
machine_learning/recommending/configs/: als.yaml  base_config.yaml  baseline.yaml  bpmf_sweep.yaml  cat.yaml  cat_aggregator.yaml  cat_ml25.yaml  implicit_mf.yaml  implicit_nn.yaml  mf.yaml  movielens_cat.yaml  my_mf.yaml  my_mf_slim.yaml  my_mf_slim_25m.yaml  pmf.yaml  slim.yaml  slim_ml25m.yaml  svd.yaml  svd_ml25m.yaml
machine_learning/recommending/configs/sweeps/: als.yaml  als_sweep.yaml  baseline_sweep.yaml  implicit_nn.yaml  mf.yaml  my_mf.yaml  my_mf_slim.yaml  pmf_sweep.yaml  slim.yaml  slim_sweep.yaml  svd.yaml
machine_learning/recommending/models/: __init__.py  als.py  baseline.py  bpmf.py  cat.py  mf.py  slim.py
machine_learning/recommending/movielens/: __init__.py  callbacks.py  cat.py  data.py  entrypoints.py  lit.py  models.py  movielens_mixin.yaml
machine_learning/recommending/my_recommending/: __init__.py  app.py  callbacks.py  data.py  interface.py  losses.py  main.py  maths.py  metrics.py  utils.py
machine_learning/recommending/my_recommending/configs/: als.yaml  base_config.yaml  cat_aggregator.yaml  cat_ml25.yaml  my_mf.yaml  my_mf_slim_25m.yaml  slim.yaml  svd.yaml  svd_ml25m.yaml
machine_learning/recommending/my_recommending/configs/sweeps/: als.yaml  baseline.yaml  cat.yaml  implicit_mf.yaml  mf.yaml  movielens_cat.yaml  slim.yaml  svd.yaml
machine_learning/recommending/my_recommending/models/: als.py  baseline.py  cat.py
machine_learning/recommending/my_recommending/movielens/: __init__.py  cat.py  data.py
machine_learning/recommending/notebooks/: lab_recommending.ipynb  ratings.csv
machine_learning/recommending/notebooks/artifacts/ALS:v0/: checkpoint
machine_learning/recommending/tests/: config_for_testing.yaml  conftest.py  test_callbacks.py  test_configs.py  test_data.py  test_extras.py  test_losses.py  test_main.py  test_math.py  test_metrics.py  test_models.py  text_extras.py  utils.py
my_tools/: .pylintrc  README.md  __init__.py  entrypoint.py  entrypoints.py  lightning.py  models.py  pyproject.toml  utils.py
my_tools/my_tools/: entrypoint.py  entrypoints.py  extra.py  models.py  sandbox_setup.py  utils.py
my_tools/tests/: models_test.py  utils_test.py
(+428 files in other folders)
