[tool.poetry]
name = "ysda"
version = "0.1.0"
description = ""
authors = ["DimaKoshman <koshmandk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.3"
pandas = "^1.5.0"
scipy = "^1.9.1"
torch = [
    { url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    { version = "^1.12.0", markers = "sys_platform == 'darwin'" }
]
sklearn = "^0.0"
wandb = "^0.13.3"
my-tools = { path = "my_tools", develop = true }
black = { extras = ["d"], version = "^22.8.0" }
pytorch-lightning = "^1.7.7"
einops = "^0.4.1"
numba = "^0.56.2"
protobuf = "3.19.4"
pytest = "^7.1.3"
jupyter = "^1.0.0"
nb-black = "^1.0.7"
matplotlib = "~3.5.0"
implicit = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
