[tool.poetry]
name = "dkoshman_my_tools"
version = "0.1.6"
description = ""
authors = ["DimaKoshman <koshmandk@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "my_tools"},
]

[tool.poetry.dependencies]
python = ">=3.8"

einops = "^0.4.1"
numba = "^0.56.2"
numpy = "^1.22"
pandas = "^1.4.0"
pytest = "^7.1.3"
pytorch-lightning = "^1.6"
scikit-learn = "^1.2.0"
scipy = "^1.7"
torch = "^1.12.1,<1.13"
trash-cli = "^0.22"
wandb = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
