[tool.poetry]
name = "recomending"
version = "0.1.0"
description = "Recommending ml project"
authors = ["dkoshman <koshmandk@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
torch = "^1.12.1"
pytorch-lightning = "^1.7.5"
wandb = "^0.13.2"
my-ml-tools = {path = "../my_python_ml_tools", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
