[tool.poetry]
name = "my_recommending"
version = "0.1.22"
description = ""
authors = ["DimaKoshman <koshmandk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"

dkoshman-my-tools = "^0.1.4"

aenum = "^3.1.11"
catboost = "^1.1"
einops = "^0.4.1"
gradio = "^3.7"
implicit = "^0.6.1"
ipykernel = "^6.19.2"
line-profiler = "^4.0.2"
matplotlib = "~3.5.0"
numba = "^0.56.2"
numpy = "^1.22"
pandas = "^1.4.0"
protobuf = "3.19.4"
pytest = "^7.1.3"
pytorch-lightning = "~1.6"
scikit-learn = "^1.2.0"
scipy = "^1.7"
shap = "^0.41.0"
torch = "^1.12.1,<1.13"
trash-cli = "^0.22"
wandb = "^0.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
