cmake_minimum_required(VERSION 3.20)
project(week_4)

set(CMAKE_CXX_STANDARD 17)

add_executable(week_4 main.cpp)
add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(6 6.cpp)
add_executable(7 7.cpp)
add_executable(8 8.cpp)
add_executable(9 9.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12.cpp)
add_executable(13 13.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(16 16.cpp)
add_executable(17 17.cpp)
add_executable(18 18.cpp)
